--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()  // Maven Central repository
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:8.0.1'
+        classpath 'com.google.gms:google-services:4.3.15'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()  // Maven Central repository
         
     }
 }
